# stock_research_with_ai

./: .dockerignore  .env.example  Dockerfile  README.md  demo_research.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_e2e.py
reports/AAPL/: 20260623_183417_research_report.json  20260623_183417_research_report.md
reports/GOOGL/: 20260623_183444_research_report.json  20260623_183444_research_report.md  20260623_183537_research_report.json  20260623_183537_research_report.md
reports/HDFCBANK_NS/: 20260623_183852_research_report.json  20260623_183852_research_report.md
reports/MEESHO_NS/: 20260624_101108_research_report.json  20260624_101108_research_report.md
reports/MSFT/: 20260623_182141_research_report.json  20260623_182141_research_report.md  20260623_182509_research_report.json  20260623_182510_research_report.json  20260623_182510_research_report.md
reports/RELIANCE_NS/: 20260623_182614_research_report.json  20260623_182614_research_report.md  20260623_183300_research_report.json  20260623_183300_research_report.md  20260623_183517_research_report.json  20260623_183517_research_report.md
reports/TEST/: 20260623_182743_research_report.json  20260623_182743_research_report.md
src/: app.py  config.py
src/llm/: groq_client.py
src/models/: portfolio.py  research.py
src/storage/: history_store.py  portfolio_store.py  report_writer.py
src/tools/: aggregator.py  charts.py  company_lookup.py  google_finance.py  scoring.py  screener_in.py  trading.py  yahoo_finance.py
src/ui/: streamlit_app.py
