[project]
name = "stock-research-with-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # LLM Stack
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.5",
    "langchain-groq>=1.1.3",
    # Environment & Config
    "python-dotenv>=1.2.2",
    # Financial Data
    "yfinance>=0.2.40",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    # Web Scraping
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "lxml>=4.9.0",
    # UI
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
    # PDF Generation
    "reportlab>=4.0.0",
    "matplotlib>=3.8.0",
    # Data Validation
    "pydantic>=2.0.0",
    # Analysis
    "scipy>=1.12.0",
]
